Way too much time spent just to appendToFav, but it works now. Gonna save this before it bugs again! :)

--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ img {
     justify-content: space-between;
 }
 
-.meal-body .fav-btn {
+.fav-btn {
     background-color: transparent;
     border: none;
     font-size: 1.2rem;
